[gd_scene load_steps=10 format=2]

[ext_resource path="res://Environment/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/SFX/Bullet.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/SFX/BulletHitRetro.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

float range(float sin_time, float min_range, float max_range) {
	return min_range+(max_range-min_range)*sin_time;
}

void fragment() {
	
	float dist = distance(UV, vec2(0.5));
	float t = (sin(TIME*10.0)+1.0)/2.0;
	
	if (dist < range(t, 0.48, 0.5)) {
		COLOR.r = 1.0;
		COLOR.g = 0.0;
		COLOR.b = 0.0;
	} else {
		COLOR.a = 0.0;
	}
	if (dist < range(t, 0.4, 0.35)) {
		COLOR.r = 1.0;
		COLOR.g = 0.5;
		COLOR.b = 0.0;
	}
	if (dist < range(t, 0.1, 0.12)) {
		COLOR.r = 1.0;
		COLOR.g = 1.0;
		COLOR.b = 0.0;
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0.854459, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 50.0
color_ramp = SubResource( 5 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
pause_mode = 2
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 6 )

[node name="ParticleTimer" type="Timer" parent="."]
one_shot = true

[node name="BulletPass" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0
autoplay = true
max_distance = 100.0

[node name="BulletHit" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
